cursus/libft-war-machine/deepthought
= Host-specific information ====================================================
$> hostname; uname -msr
msi-desktop
Linux 5.13.19-2-MANJARO x86_64
$> date
lun 02 may 2022 21:31:35 CEST
$> gcc --version
gcc (GCC) 11.2.0
Copyright (C) 2021 Free Software Foundation, Inc.
Esto es software libre; vea el código para las condiciones de copia.  NO hay
garantía; ni siquiera para MERCANTIBILIDAD o IDONEIDAD PARA UN PROPÓSITO EN
PARTICULAR

$> clang --version
clang version 13.0.1
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin

= libft.h=======================================================================
$> norminette libft.h | grep -E '(Error|Warning)'

= Compiling libft ==============================================================
$> make re
rm -f libft.a
gcc -Wall -Wextra -Werror -c ft_isalpha.c -o ft_isalpha.o -I includes
gcc -Wall -Wextra -Werror -c ft_isdigit.c -o ft_isdigit.o -I includes
gcc -Wall -Wextra -Werror -c ft_isalnum.c -o ft_isalnum.o -I includes
gcc -Wall -Wextra -Werror -c ft_isascii.c -o ft_isascii.o -I includes
gcc -Wall -Wextra -Werror -c ft_isprint.c -o ft_isprint.o -I includes
gcc -Wall -Wextra -Werror -c ft_strlen.c -o ft_strlen.o -I includes
gcc -Wall -Wextra -Werror -c ft_toupper.c -o ft_toupper.o -I includes
gcc -Wall -Wextra -Werror -c ft_tolower.c -o ft_tolower.o -I includes
gcc -Wall -Wextra -Werror -c ft_strchr.c -o ft_strchr.o -I includes
gcc -Wall -Wextra -Werror -c ft_strrchr.c -o ft_strrchr.o -I includes
gcc -Wall -Wextra -Werror -c ft_strncmp.c -o ft_strncmp.o -I includes
gcc -Wall -Wextra -Werror -c ft_memset.c -o ft_memset.o -I includes
gcc -Wall -Wextra -Werror -c ft_bzero.c -o ft_bzero.o -I includes
gcc -Wall -Wextra -Werror -c ft_memchr.c -o ft_memchr.o -I includes
gcc -Wall -Wextra -Werror -c ft_memcpy.c -o ft_memcpy.o -I includes
gcc -Wall -Wextra -Werror -c ft_memcmp.c -o ft_memcmp.o -I includes
gcc -Wall -Wextra -Werror -c ft_memmove.c -o ft_memmove.o -I includes
gcc -Wall -Wextra -Werror -c ft_strnstr.c -o ft_strnstr.o -I includes
ft_strnstr.c: En la función ‘ft_strnstr’:
ft_strnstr.c:56:31: error: el retorno de ‘int’ desde una función con tipo de retorno ‘char *’ crea un puntero desde un entero sin una conversión [-Werror=int-conversion]
   56 |                         return(1);
      |                               ^
cc1: todos los avisos se tratan como errores
make: *** [Makefile:42: ft_strnstr.o] Error 1

$> make bonus
make: *** No hay ninguna regla para construir el objetivo 'bonus'.  Alto.

$> ls -la libft.a

= Part1_functions ==============================================================

= ft_strnstr.c =================================================================
$> norminette ft_strnstr.c | grep -E '(Error|Warning)'
../libft//ft_strnstr.c: Error!
Error: EMPTY_LINE_FUNCTION  (line:  45, col:   1):	Empty line in function
Error: SPACE_EMPTY_LINE     (line:  45, col:   1):	Space on empty line
Error: VAR_DECL_START_FUNC  (line:  46, col:   1):	Variable declaration not at start of function
Error: SPACE_REPLACE_TAB    (line:  46, col:  11):	Found space when expecting tab
Error: SPACE_REPLACE_TAB    (line:  47, col:  11):	Found space when expecting tab
Error: SPACE_REPLACE_TAB    (line:  48, col:   9):	Found space when expecting tab
Error: MISALIGNED_VAR_DECL  (line:  48, col:  10):	Misaligned variable declaration
Error: TOO_MANY_TAB         (line:  56, col:   1):	Extra tabs for indent level
Error: SPACE_AFTER_KW       (line:  56, col:  13):	Missing space after keyword
Error: SPC_BFR_PAR          (line:  56, col:  19):	Missing space before parenthesis (brace/bracket)
Error: SPC_BFR_OPERATOR     (line:  63, col:  36):	missing space before operator
Error: SPC_BFR_OPERATOR     (line:  63, col:  39):	missing space before operator
Error: SPC_AFTER_OPERATOR   (line:  63, col:  42):	missing space after operator
Error: SPC_BFR_OPERATOR     (line:  63, col:  42):	missing space before operator
Error: LINE_TOO_LONG        (line:  69, col:   1):	line too long
Error: LINE_TOO_LONG        (line:  69, col:   1):	line too long
Norme check failed
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_strnstr.c main.c libft.a -o user_exe

clang-13: error: no such file or directory: '/home/rikrdo/42malaga/cursus/libft-war-machine/dirlibft/libft.a'
